--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: documentation
-        path: docs/html/
+        path: docs/doxygen/html/
         retention-days: 30
 
   coverage:
