Integrate generators and improve build system
This commit integrates the new generators into the CMake build system and improves installation and packaging infrastructure.

Main CMakeLists.txt:
- Add MCF-Examples bundle packaging using mcf_package_application_bundle()
- Implement comprehensive install rules for headers, modules, and documentation
- Add package-release target for creating SDK distribution
- Include GNUInstallDirs and CMakePackageConfigHelpers
- Generate and install CMake config files for downstream projects
- Export ModularCppFrameworkTargets for package integration

Core and Module CMakeLists.txt:
- Use generator expressions for build vs install include paths
- $<BUILD_INTERFACE:...> for local build tree
- $<INSTALL_INTERFACE:include> for installed package
- Export targets for proper package integration
- Support both local builds and installed package usage

Tests CMakeLists.txt:
- Add test_plugin_loader_edge_cases executable
- Add test_tools_scripts executable for generator validation
- Update unit_tests target to include new tests
- Ensure all test executables output to build/bin/tests/

Features:
- Proper CMake package integration (find_package support)
- SDK packaging with package-release target
- Examples bundling for distribution
- Correct include paths for both build and install trees
- Export targets for downstream CMake projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,9 +93,178 @@ if(BUILD_EXAMPLES)
 
     # Networking Examples
     add_subdirectory(examples/networking)
+
+    # ========================================================================
+    # Package Examples Applications (Binary Distribution)
+    # ========================================================================
+    # This demonstrates how to use mcf_package_application_bundle() to create
+    # a binary distribution bundle containing multiple applications (for end-users)
+
+    include(cmake/MCFPackaging.cmake)
+
+    # Create a bundle target that packages all examples together
+    mcf_package_application_bundle(
+        BUNDLE_NAME "MCF-Examples"
+        VERSION ${PROJECT_VERSION}
+        TARGETS
+            logger_example
+            hot_reload_demo
+            realtime_app_example
+            event_driven_app_example
+            profiling_example
+            filesystem_example
+            networking_server_example
+            networking_client_example
+        PLUGINS
+            example_plugin
+            hot_reload_example
+        DESCRIPTION "ModularCppFramework Examples - Demonstrating MCF features"
+        APPLICATIONS_INFO
+            "logger_example=Logger module with JSON config"
+            "hot_reload_demo=Plugin hot-reload demonstration"
+            "realtime_app_example=Fixed timestep realtime loop"
+            "event_driven_app_example=Event-driven architecture"
+            "profiling_example=Performance profiling"
+            "filesystem_example=Filesystem utilities"
+            "networking_server_example=TCP server"
+            "networking_client_example=TCP client"
+    )
+
 endif()
 
-# Install rules
-install(DIRECTORY ${CMAKE_BINARY_DIR}/plugins/
-        DESTINATION plugins
-        FILES_MATCHING PATTERN "*.so" PATTERN "*.dll")
+# ============================================================================
+# Installation Rules
+# ============================================================================
+
+include(GNUInstallDirs)
+include(CMakePackageConfigHelpers)
+
+# Install core headers (header-only library)
+install(DIRECTORY core/
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mcf/core
+        FILES_MATCHING PATTERN "*.hpp"
+        PATTERN "*.cpp" EXCLUDE)
+
+# Install module headers
+install(DIRECTORY modules/logger/
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mcf/modules/logger
+        FILES_MATCHING PATTERN "*.hpp"
+        PATTERN "*.cpp" EXCLUDE)
+
+install(DIRECTORY modules/networking/
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mcf/modules/networking
+        FILES_MATCHING PATTERN "*.hpp"
+        PATTERN "*.cpp" EXCLUDE)
+
+install(DIRECTORY modules/profiling/
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mcf/modules/profiling
+        FILES_MATCHING PATTERN "*.hpp"
+        PATTERN "*.cpp" EXCLUDE)
+
+install(DIRECTORY modules/realtime/
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mcf/modules/realtime
+        FILES_MATCHING PATTERN "*.hpp"
+        PATTERN "*.cpp" EXCLUDE)
+
+# Install module libraries (if built)
+install(TARGETS mcf_logger_module mcf_networking_module mcf_profiling_module mcf_realtime_module
+        EXPORT ModularCppFrameworkTargets
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+# Install documentation
+install(FILES README.md LICENSE CHANGELOG.md
+        DESTINATION ${CMAKE_INSTALL_DOCDIR})
+
+install(DIRECTORY docs/
+        DESTINATION ${CMAKE_INSTALL_DOCDIR}
+        FILES_MATCHING PATTERN "*.md")
+
+# Generate and install CMake config files
+configure_package_config_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ModularCppFrameworkConfig.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/ModularCppFrameworkConfig.cmake
+    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/ModularCppFramework
+)
+
+write_basic_package_version_file(
+    ${CMAKE_CURRENT_BINARY_DIR}/ModularCppFrameworkConfigVersion.cmake
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY SameMajorVersion
+)
+
+install(FILES
+        ${CMAKE_CURRENT_BINARY_DIR}/ModularCppFrameworkConfig.cmake
+        ${CMAKE_CURRENT_BINARY_DIR}/ModularCppFrameworkConfigVersion.cmake
+        ${CMAKE_CURRENT_SOURCE_DIR}/cmake/MCFPackaging.cmake
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/ModularCppFramework)
+
+# Install export targets
+install(EXPORT ModularCppFrameworkTargets
+        FILE ModularCppFrameworkTargets.cmake
+        NAMESPACE mcf::
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/ModularCppFramework)
+
+# ============================================================================
+# Packaging Target
+# ============================================================================
+
+# Custom target to create a release package
+add_custom_target(package-release
+    COMMAND ${CMAKE_COMMAND} -E echo "Creating release package..."
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/package
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}
+
+    # Copy headers (only .hpp files, exclude build artifacts)
+    COMMAND ${CMAKE_SOURCE_DIR}/cmake/package-headers.sh
+            ${CMAKE_SOURCE_DIR}
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/include/mcf
+
+    # Copy documentation
+    COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_SOURCE_DIR}/README.md
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/
+    COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_SOURCE_DIR}/LICENSE
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/
+    COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_SOURCE_DIR}/CHANGELOG.md
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+            ${CMAKE_SOURCE_DIR}/docs
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/docs
+
+    # Copy CMake config files
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/cmake
+    COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_BINARY_DIR}/ModularCppFrameworkConfig.cmake
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/cmake/
+    COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_BINARY_DIR}/ModularCppFrameworkConfigVersion.cmake
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/cmake/
+
+    # Copy compiled libraries (only STATIC modules, not INTERFACE)
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/lib
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${CMAKE_BINARY_DIR}/lib/libmcf_networking_module.a
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/lib/
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${CMAKE_BINARY_DIR}/lib/libmcf_profiling_module.a
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/lib/
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${CMAKE_BINARY_DIR}/lib/libmcf_realtime_module.a
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/lib/
+
+    # Create tarball
+    COMMAND ${CMAKE_COMMAND} -E chdir ${CMAKE_BINARY_DIR}/package
+            ${CMAKE_COMMAND} -E tar czf
+            ../modular-cpp-framework-${PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}.tar.gz
+            modular-cpp-framework-${PROJECT_VERSION}
+
+    COMMENT "Building release package: modular-cpp-framework-${PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}.tar.gz"
+    VERBATIM
+)
+
+# Make sure modules are built before packaging
+add_dependencies(package-release mcf_logger_module mcf_networking_module mcf_profiling_module mcf_realtime_module)
