--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,8 +3,10 @@ cmake_minimum_required(VERSION 3.16)
 # Core library as header-only
 add_library(mcf_core INTERFACE)
 
+# Different include directories for build vs install
 target_include_directories(mcf_core INTERFACE
-    ${CMAKE_CURRENT_SOURCE_DIR}
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
+    $<INSTALL_INTERFACE:include>
 )
 
 target_compile_features(mcf_core INTERFACE cxx_std_17)
@@ -14,7 +16,6 @@ if(UNIX)
     target_link_libraries(mcf_core INTERFACE dl pthread)
 endif()
 
-# Install headers
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
-        DESTINATION include/mcf
-        FILES_MATCHING PATTERN "*.hpp")
+# Install target for export
+install(TARGETS mcf_core
+        EXPORT ModularCppFrameworkTargets)
