--- a/modules/logger/CMakeLists.txt
+++ b/modules/logger/CMakeLists.txt
@@ -7,8 +7,10 @@ cmake_minimum_required(VERSION 3.16)
 # However, we can add an interface library for organization
 add_library(mcf_logger_module INTERFACE)
 
+# Use generator expressions for build vs install paths
 target_include_directories(mcf_logger_module INTERFACE
-    ${CMAKE_CURRENT_SOURCE_DIR}/../..
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
+    $<INSTALL_INTERFACE:include>
 )
 
 target_link_libraries(mcf_logger_module INTERFACE mcf_core)
