--- a/modules/realtime/CMakeLists.txt
+++ b/modules/realtime/CMakeLists.txt
@@ -6,7 +6,8 @@ add_library(mcf_realtime_module STATIC
 )
 
 target_include_directories(mcf_realtime_module PUBLIC
-    ${CMAKE_SOURCE_DIR}
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
 )
 
 target_link_libraries(mcf_realtime_module PUBLIC
