--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -109,6 +109,20 @@ add_executable(test_plugin_manager_edge_cases
 target_link_libraries(test_plugin_manager_edge_cases PRIVATE mcf_core Catch2)
 add_test(NAME PluginManagerEdgeCases COMMAND test_plugin_manager_edge_cases)
 
+# PluginLoader Edge Cases Tests
+add_executable(test_plugin_loader_edge_cases
+    unit/test_plugin_loader_edge_cases.cpp
+)
+target_link_libraries(test_plugin_loader_edge_cases PRIVATE mcf_core Catch2)
+add_test(NAME PluginLoaderEdgeCases COMMAND test_plugin_loader_edge_cases)
+
+# Tools Scripts Tests
+add_executable(test_tools_scripts
+    unit/test_tools_scripts.cpp
+)
+target_link_libraries(test_tools_scripts PRIVATE mcf_core Catch2)
+add_test(NAME ToolsScripts COMMAND test_tools_scripts)
+
 # ============================================
 # Integration Tests
 # ============================================
@@ -204,6 +218,8 @@ set_target_properties(
     test_logger_edge_cases
     test_eventbus_edge_cases
     test_plugin_manager_edge_cases
+    test_plugin_loader_edge_cases
+    test_tools_scripts
     test_app
     test_plugin_manager
     test_config
@@ -223,7 +239,7 @@ set_target_properties(
 
 # Run all unit tests
 add_custom_target(unit_tests
-    COMMAND ${CMAKE_CTEST_COMMAND} -R "EventBus|ServiceLocator|ResourceManager|DependencyResolver|FileWatcher|ThreadPool|FileSystem|PluginLoader|Application|Module|JsonParserEdgeCases|LoggerModule|LoggerEdgeCases|EventBusEdgeCases|PluginManagerEdgeCases" --exclude-regex Integration
+    COMMAND ${CMAKE_CTEST_COMMAND} -R "EventBus|ServiceLocator|ResourceManager|DependencyResolver|FileWatcher|ThreadPool|FileSystem|PluginLoader|Application|Module|JsonParserEdgeCases|LoggerModule|LoggerEdgeCases|EventBusEdgeCases|PluginManagerEdgeCases|PluginLoaderEdgeCases|ToolsScripts" --exclude-regex Integration
     DEPENDS test_eventbus
             test_service_locator
             test_resource_manager
@@ -239,6 +255,8 @@ add_custom_target(unit_tests
             test_logger_edge_cases
             test_eventbus_edge_cases
             test_plugin_manager_edge_cases
+            test_plugin_loader_edge_cases
+            test_tools_scripts
     COMMENT "Running unit tests..."
 )
 
