Update .gitignore for generators and packaging
Add build output directories and CMake exceptions:
- release/ and debug/ build output directories
- Allow cmake/*.cmake files (generators and config)
- Allow portfile.cmake for vcpkg support

This ensures generated CMake files in cmake/ directory are tracked
while still ignoring CMake-generated build files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ bin/
 cmake-build-*/
 out/
 dist/
+release/
+debug/
 
 # CMake Generated Files
 CMakeCache.txt
@@ -14,6 +16,8 @@ Makefile
 *.cmake
 !CMakeLists.txt
 !*/CMakeLists.txt
+!cmake/*.cmake
+!portfile.cmake
 
 # Compiled Object Files and Libraries
 *.o
