Ignore generator test output in plugins directory
Add .gitignore entries for plugins generated during testing:
- plugins/TestPlugin/
- plugins/EventPlugin/
- plugins/RealtimePlugin/
- GENERATORS_README.txt

These are temporary test artifacts created by the generator
scripts during test execution and should not be committed.

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,9 @@ __pycache__/
 local_config.json
 .env
 .env.local
+
+# Generator Test Output (plugins generated during testing)
+plugins/TestPlugin/
+plugins/EventPlugin/
+plugins/RealtimePlugin/
+GENERATORS_README.txt
