Migrate tools from shell scripts to Python for cross-platform support
Replace bash scripts with Python 3.6+ implementations for better Windows compatibility:
- tools/create-plugin.sh -> tools/create-plugin.py
- tools/create-application.sh -> tools/create-application.py
- tools/package-application.sh -> tools/package-application.py
- cmake/package-headers.sh -> CMake commands in CMakeLists.txt

Benefits:
- Native Windows support without WSL/Git Bash
- Consistent behavior across all platforms (Linux, macOS, Windows)
- Easier to maintain and test
- Better error handling and user feedback

All tests passing (26/26):
- Unit tests: 17/17
- Integration tests: 8/8
- Tools tests: Updated for Python scripts

Documentation updated:
- All generator docs reference Python scripts
- Added CROSS_PLATFORM.md development guide
- Updated tools README with Python requirements
- Fixed CMake packaging to use native commands

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,9 +217,19 @@ add_custom_target(package-release
     COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}
 
     # Copy headers (only .hpp files, exclude build artifacts)
-    COMMAND ${CMAKE_SOURCE_DIR}/cmake/package-headers.sh
-            ${CMAKE_SOURCE_DIR}
-            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/include/mcf
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/include/mcf
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+            ${CMAKE_SOURCE_DIR}/core
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/include/mcf/core
+            PATTERN "*.cpp" EXCLUDE
+            PATTERN "*.o" EXCLUDE
+            PATTERN "build" EXCLUDE
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+            ${CMAKE_SOURCE_DIR}/modules
+            ${CMAKE_BINARY_DIR}/package/modular-cpp-framework-${PROJECT_VERSION}/include/mcf/modules
+            PATTERN "*.cpp" EXCLUDE
+            PATTERN "*.o" EXCLUDE
+            PATTERN "build" EXCLUDE
 
     # Copy documentation
     COMMAND ${CMAKE_COMMAND} -E copy
